static/css/base.css
/* font-family: 'IBM Plex Sans', sans-serif;
font-family: 'Lobster', cursive; */

body {
    background: url('/media/hero-image1.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 88px);
    font-family: 'IBM Plex Sans', sans-serif;
}

/* code for overlay taken from
https://learn.codeinstitute.net/courses/course-v1:CodeInstitute+FSF_102+Q1_2020/courseware/4201818c00aa4ba3a0dae243725f6e32/71413627006c4cac9b18a1de1e12a4ff/ */
.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: white;
    z-index: -1;
}

.container-padding {
    padding-top: 100px;
}

.list-group {
    max-width: 400px;
}

/* navbar */
.main-nav-logo {
    font-family: 'Lobster', cursive;
    color: #9f9f9f !important;
}

/* text */
.text-grey {
    color: #9f9f9f !important;
}

/* buttons */
.btn-grey {
    background-color: #9f9f9f;
}

.shop-now-button {
    background: black;
    color: white;
    min-width: 260px;
}

.update-link,
.remove-item {
    cursor: pointer;
}

/* colors */
.bg-maroon {
    background-color: #540404;
}

/* toasts */
.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* media queries */

